--- a/package.yml
+++ b/package.yml
@@ -8,6 +8,6 @@ tags:
 - ipad
 - mobilesafari
 current: 1.0.0
-author: Matt McCloskey
+author: mattmccloskey
 contact: mattmccloskey@gmail.com
 website: http://kemso.com
